style.css
* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

body {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    min-height: 100vh;
    margin: 0;
    background-color: black;
}

#container {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    width: 100%;
    padding: 0 16px;
    box-sizing: border-box;
}

#welcome {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-around;
    font-family: "Bitcount Single", sans-serif;
    color: greenyellow;
}

h1 {
    font-size: clamp(1rem, 6vw, 3rem);
}

h4 {
    margin-top:16px;
    margin-bottom: 32px;
}

.choices {
    display: flex;
    justify-content: center;
    gap: 64px;
    font-family: 'Courier New', Courier, monospace;
}

button {
    font-family: 'Courier New', Courier, monospace;
    background-color: aquamarine;
    border: none;
    border-radius: 4px; 
    padding: 8px 16px;
    font-weight: 900;
}

button:hover {
    background-color: green;
}

.scoreUpdates{
    display: flex;
    flex-direction: column;
    margin-top: 32px;
    align-items: center;
    gap: 8px;
    font-family: 'Courier New', Courier, monospace;
    color: white;
}

#roundResult, #runningScore, #finalScore {
    min-height: 24px;
    font-size: 16px;
}

#reset {
    display: none;
}

#playAgain {
    display: flex;
    justify-content: center;
    margin-top: 24px;
    min-height: 32px;
}

